# the-witness

./: .gitignore  Cargo.toml  README.md  witness.toml
demo_usage/: USAGE_SECTION.md
demo_usage/screenshots/: README.md
demo_usage/source/: render_usage_demo.py  video_concat.txt
demo_videos/: README.md  render_videos.py
docs/: README.md  architecture.md  commands.md  demo_script.md  features.md  final_full_test_report.md  google_colab_finetuning.md  hackathon_writeup.md  kaggle_cli.md  linux.md  macos.md  services.md  setup.md  status.md  the_witness_embedded_images.md  tracks.md  user_completion_guide.md  webui_design_report.md  webui_humanization_report.md  windows.md
docs/pdf/: README.md  The_Witness_Documentation.md  generate_documentation.py  (+2 more)
examples/: blackbox.toml  codex.toml  education.toml  llamacpp.toml  mock_upstream_server.py  ollama.toml
gallery/: README.md  kaggle_gallery_order.md  logo_witness_ascii.txt
models/: models.toml  remote_models.toml
scripts/: demo.sh  e2e_demo.sh  install.ps1  install.sh  run_llamacpp.sh  run_ollama.sh  verify.sh
src/: cli.rs  config.rs  control.rs  lib.rs  main.rs  service.rs  tailscale.rs  types.rs
tests/: backend_choices.rs  banana_disapproval.rs  cli_replay_export.rs  config_path.rs  core_behaviour.rs  dashboard_service_tailscale.rs  doctor_backend_health.rs  example_configs.rs  final_defaults.rs  judge_schema_parsing.rs  model_registry_custom.rs  settings_backend_shortcuts.rs  tui_layout.rs
training/: README.md
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
(+94 files in other folders)
